fix readme link

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "homepage": "https://skjv.github.io/webbs-5-things",
+  "homepage": "https://flacito.github.io/webbs-5-things",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
